--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 main {
-  width: 250px;
+  max-width: 400px;
   padding: 14px;
   border-radius: 20px;
   background-color: hsl(216, 50%, 16%);
@@ -99,7 +99,7 @@ h1 {
   background-color: hsl(178, 100%, 50%, 60%);
   top: 0;
   width: 100%;
-  height: 96%;
+  height: 98%;
   border-radius: 5px;
   opacity: 0;
 }
